# amazon-ocr

./: .gitignore  README.md  cut_files.py  pyproject.toml  requirements.txt
docs/: INSTALL.md  USAGE.md
product_extractor/: __init__.py  analyze.py  cli.py  commons.py  detection.py  extractor.py  ocr_utils.py  pdf_utils.py  thresholds.py
